Add new colours

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             let table = document.querySelector('#table');
             table.innerHTML = "";
             let k = 1;
-            var colours = "pink,orange,yellow,green,cyan,aqua,dodgerblue,aquamarine,floralwhite".split(",");
+            var colours = "chartreuse,pink,orange,yellow,green,cyan,aqua,dodgerblue,aquamarine,floralwhite,black,purple,gold,violet".split(",");
             document.body.style.backgroundColor = colours[Math.floor(Math.random() * colours.length)];
             document.getElementById("STARTGAME").innerHTML = "";
             document.getElementById("RULES").innerHTML = "";
